<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.JoinActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_marginTop="12dp"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:src="@drawable/baseline_sports_soccer_24"/>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font2"
                android:textSize="50sp"
                android:gravity="center"
                android:text="회원가입 화면입니다."/>

        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="20dp"
            android:textColorHint="@color/lightGray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/joinEmail"
                android:hint="@string/Join_emailHintStr"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="20dp"
            android:textColorHint="@color/lightGray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/joinPassword"
                android:hint="@string/Join_passwordHintStr"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/lightGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Join_passwordPattern"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="20dp"
            android:textColorHint="@color/lightGray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/joinPasswordCheck"
                android:hint="@string/Join_passwordCheckHintStr"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="20dp"
            android:textColorHint="@color/lightGray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/joinNickname"
                android:hint="@string/Join_nickNameHintStr"
                android:inputType="text"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/joinNicknameCheckBtn"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="닉네임 중복확인"/>

        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/joinBackBtn"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/BackBtnStr"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/joinLoginBtn"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="회원가입"/>


        </LinearLayout>
    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>